# src_platform_clip-install-clip

./: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
etc/admin/clip_install/: Makefile.am  Makefile.in  clip_install_clip_apps.conf
etc/admin/clip_install/apt.conf.d/: Makefile.am  Makefile.in
etc/clip_update/clip_install/: Makefile.am  Makefile.in  apt.conf.clip.apps  apt.conf.clip.core  apt.conf.clip.core.altroot  sources.list.clip.apps
etc/init.d/: Makefile.am  Makefile.in  clip_apps_install  clip_core_install  rm_apps_install  rm_core_install
lib/: Makefile.am  Makefile.in  common
man/man8/: Makefile.am  Makefile.in  clip_install_clip_core.8
scripts/: Makefile.am  Makefile.in  clip_install_clip_core
